[gd_scene load_steps=4 format=3 uid="uid://c6rhpchogqmig"]

[ext_resource type="Script" path="res://addons/orgprez/OrgPrezRuntime.gd" id="1"]
[ext_resource type="Script" path="res://addons/orgprez/OrgPrezScriptEngine.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dowvk42pqj4u4" path="res://addons/orgprez/OrgPrezStepper.tscn" id="4"]

[node name="OrgPrezRuntime" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="OrgPrezScriptEngine" type="Node" parent="."]
script = ExtResource("2")

[node name="OrgPrezStepper" parent="." instance=ExtResource("4")]
position = Vector2i(500, 50)
transient = true

[connection signal="macro_finished" from="OrgPrezScriptEngine" to="." method="_on_macro_finished"]
[connection signal="script_finished" from="OrgPrezScriptEngine" to="." method="_on_script_finished"]
[connection signal="orgprez_line_changed" from="OrgPrezStepper" to="." method="_on_OrgPrezStepper_orgprez_line_changed"]
[connection signal="orgprez_node_changed" from="OrgPrezStepper" to="." method="_on_orgnode_changed"]
